Cleanup - remove unused code, fix warnings, dependencies